# docs_api_rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  tests.rs
src/api/: document.rs  mod.rs  user.rs  user_api.rs
src/helpers/: jwt.rs  mod.rs
src/models/: document.rs  mod.rs  user_model.rs
src/repository/: mongodb_repo.rs
src/users/: handler.rs  mod.rs  repository.rs
tests/: test.rs
