[package]
name = "docs_api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2-mongodb = "*"
rocket = "0.4.11"
rocket_codegen = "0.4.11"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"

# Benches
criterion = "0.3"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4"

[[bench]]
name = "my_benchmark"
harness = false