[package]
name = "docs_api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
jsonwebtoken = "8.1"
regex = "1.6"
chrono = "0.4.22"
struct_helpers = { git = "https://github.com/n8e/struct-helpers", features = ["rocket"] }
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }

[dependencies.mongodb]
version = "2.3"

[dev-dependencies]
reqwest = "0.11"